--- a/mta.yaml
+++ b/mta.yaml
@@ -1,60 +1,125 @@
-## Generated mta.yaml based on template version 0.4.0
-## appName = MyApp
-## language=nodejs; multitenant=false
-## approuter=
-_schema-version: '3.1'
+_schema-version: "3.1"
 ID: MyApp
+description: A simple CAP project.
 version: 1.0.0
-description: "A simple CAP project."
+modules:
+- name: MyApp-srv
+  type: nodejs
+  path: srv
+  requires:
+  - name: MyApp-db
+  provides:
+  - name: srv-api
+    properties:
+      srv-url: ${default-url}
+  parameters:
+    buildpack: nodejs_buildpack
+- name: MyApp-db-deployer
+  type: hdb
+  path: db
+  requires:
+  - name: MyApp-db
+  parameters:
+    buildpack: nodejs_buildpack
+- name: MyApp-destination-content
+  type: com.sap.application.content
+  requires:
+  - name: MyApp-destination-service
+    parameters:
+      content-target: true
+  - name: MyApp_html_repo_host
+    parameters:
+      service-key:
+        name: MyApp_html_repo_host-key
+  - name: uaa_MyApp
+    parameters:
+      service-key:
+        name: uaa_MyApp-key
+  parameters:
+    content:
+      instance:
+        destinations:
+        - Name: myhana_app_MyApp_html_repo_host
+          ServiceInstanceName: MyApp-html5-app-host-service
+          ServiceKeyName: MyApp_html_repo_host-key
+          sap.cloud.service: myhana.app
+        - Authentication: OAuth2UserTokenExchange
+          Name: myhana_app_uaa_MyApp
+          ServiceInstanceName: MyApp-xsuaa-service
+          ServiceKeyName: uaa_MyApp-key
+          sap.cloud.service: myhana.app
+        existing_destinations_policy: ignore
+  build-parameters:
+    no-source: true
+- name: MyApp-app-content
+  type: com.sap.application.content
+  path: .
+  requires:
+  - name: MyApp_html_repo_host
+    parameters:
+      content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - myapp.zip
+      name: myapp
+      target-path: resources/
+- name: myapp
+  type: html5
+  path: app/myapp
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
+resources:
+- name: MyApp-db
+  type: com.sap.xs.hdi-container
+  parameters:
+    service: hana
+    service-plan: hdi-shared
+  properties:
+    hdi-service-name: ${service-name}
+- name: MyApp-destination-service
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: true
+      init_data:
+        instance:
+          destinations:
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          existing_destinations_policy: update
+      version: 1.0.0
+    service: destination
+    service-name: MyApp-destination-service
+    service-plan: lite
+- name: MyApp_html_repo_host
+  type: org.cloudfoundry.managed-service
+  parameters:
+    service: html5-apps-repo
+    service-name: MyApp-html5-app-host-service
+    service-plan: app-host
+- name: uaa_MyApp
+  type: org.cloudfoundry.managed-service
+  parameters:
+    path: ./xs-security.json
+    service: xsuaa
+    service-name: MyApp-xsuaa-service
+    service-plan: application
 parameters:
+  deploy_mode: html5-repo
   enable-parallel-deployments: true
-   
 build-parameters:
   before-all:
-   - builder: custom
-     commands:
-      - npm install --production
-      - npx -p @sap/cds-dk cds build --production
-
-modules:
- # --------------------- SERVER MODULE ------------------------
- - name: MyApp-srv
- # ------------------------------------------------------------
-   type: nodejs
-   path: srv
-   parameters:
-     buildpack: nodejs_buildpack
-   requires:
-    # Resources extracted from CAP configuration
-    - name: MyApp-db
-   provides:
-    - name: srv-api      # required by consumers of CAP services (e.g. approuter)
-      properties:
-        srv-url: ${default-url}
-
- # -------------------- SIDECAR MODULE ------------------------
- - name: MyApp-db-deployer
- # ------------------------------------------------------------
-   type: hdb
-   path: db  
-   parameters:
-     buildpack: nodejs_buildpack
-   requires:
-    # 'hana' and 'xsuaa' resources extracted from CAP configuration
-    - name: MyApp-db
-
-
-resources:
- # services extracted from CAP configuration
- # 'service-plan' can be configured via 'cds.requires.<name>.vcap.plan'
-# ------------------------------------------------------------
- - name: MyApp-db
-# ------------------------------------------------------------
-   type: com.sap.xs.hdi-container
-   parameters:
-     service: hana  # or 'hanatrial' on trial landscapes
-     service-plan: hdi-shared
-   properties:
-     hdi-service-name: ${service-name}
-
-
+  - builder: custom
+    commands:
+    - npm install --production
+    - npx -p @sap/cds-dk cds build --production
