--- a/app/myapp/webapp/manifest.json
+++ b/app/myapp/webapp/manifest.json
@@ -116,7 +116,8 @@
                                         "route": "MyEntityObjectPage"
                                     }
                                 }
-                            }
+                            },
+                            "initialLoad": "Enabled"
                         }
                     }
                 },
