--- a/app/myapp/xs-app.json
+++ b/app/myapp/xs-app.json
@@ -2,6 +2,12 @@
   "welcomeFile": "/index.html",
   "authenticationMethod": "route",
   "routes": [
+      {
+        "source": "/catalog/(.*)",
+        "destination": "myhana-app-api",
+        "csrfProtection": true,
+        "authenticationType": "xsuaa"
+    },
     {
       "source": "^/resources/(.*)$",
       "target": "/resources/$1",
