--- a/mta.yaml
+++ b/mta.yaml
@@ -8,12 +8,11 @@ modules:
   path: srv
   requires:
   - name: MyApp-db
-  provides:
-  - name: srv-api
-    properties:
-      srv-url: ${default-url}
+  - name: uaa_MyApp
   parameters:
-    buildpack: nodejs_buildpack
+    host: ${appname}
+  build-parameters:
+    ignore: [".env", "./node_modules"]
 - name: MyApp-db-deployer
   type: hdb
   path: db
@@ -21,6 +20,8 @@ modules:
   - name: MyApp-db
   parameters:
     buildpack: nodejs_buildpack
+  build-parameters:
+    ignore: [".env", "./node_modules"]
 - name: MyApp-destination-content
   type: com.sap.application.content
   requires:
@@ -96,6 +97,13 @@ resources:
             ProxyType: Internet
             Type: HTTP
             URL: https://ui5.sap.com
+          - Name: myhana-app-api
+            Authentication: NoAuthentication
+            ProxyType: Internet
+            HTML5.ForwardAuthToken: true
+            HTML5.DynamicDestination: true
+            Type: HTTP
+            URL: https://${appname}.${default-domain}
           existing_destinations_policy: update
       version: 1.0.0
     service: destination
@@ -114,9 +122,12 @@ resources:
     service: xsuaa
     service-name: MyApp-xsuaa-service
     service-plan: application
+
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
+  appname: myuniqueapp-11112021
+
 build-parameters:
   before-all:
   - builder: custom
